# silence

./: .gitattributes  .gitignore  AGENTS.md  App.xaml  App.xaml.cs  Cargo.toml  Dioxus.toml  LayeredOverlay.cs  MainWindow.xaml  MainWindow.xaml.cs  OverlayWindow.xaml  OverlayWindow.xaml.cs  Package.appxmanifest  README.md  RELEASE-README.md  RELEASE_NOTES.md  Silence!.csproj  Silence!.sln  app.manifest  build-chocolatey-release.ps1  build-installers.ps1  build.ps1  github-release.ps1  publish-release.ps1  silence!.nuspec
.github/: FUNDING.yml
.github/workflows/: build-release.yml
Chocolatey/: CHOCOLATEY_QUICKSTART.md  ReadMe.md  build-chocolatey.ps1  hint.md  silence!.nuspec
Chocolatey/tools/: VERIFICATION.txt  chocolateybeforemodify.ps1  chocolateyinstall.ps1  chocolateyuninstall.ps1
Pages/: AboutPage.xaml  AboutPage.xaml.cs  AppearancePage.xaml  AppearancePage.xaml.cs  AutoMutePage.xaml  AutoMutePage.xaml.cs  GeneralPage.xaml  GeneralPage.xaml.cs  HoldToMutePage.xaml  HoldToMutePage.xaml.cs  OverlayPage.xaml  OverlayPage.xaml.cs  SoundsPage.xaml  SoundsPage.xaml.cs
Properties/: launchSettings.json
Services/: GamepadInputService.cs  KeyboardHookService.cs  LocalizationService.cs  MicrophoneService.cs  NotificationService.cs  SettingsService.cs  SoundService.cs  UpdateService.cs
Strings/en-US/: Resources.resw
Strings/ru-RU/: Resources.resw
assets/scripts/: welcome-stars.js
assets/styles/: about.css  controls.css  general.css  global.css  hotkeys.css  layout.css  overlay.css  sounds.css  tabs.css  titlebar.css  welcome.css
docs/: CNAME  index.html  mica-white-background-fix.md  old.html  site.webmanifest
installer/: nsis-template.nsi  silence-arm64.iss  silence-x64.iss  silence-x86.iss
src/: main.rs  native_overlay.rs  overlay_icons.rs  updater.rs
src/gui/: controls.rs  mod.rs  styles.rs  tabs.rs  welcome.rs
src/gui/sections/: about.rs  advanced.rs  auto_mute.rs  devices.rs  general.rs  hold_to_mute.rs  hotkeys.rs  mod.rs  overlay.rs  sounds.rs  tray_icon.rs
src/main_parts/: app_boot.rs  audio.rs  constants.rs  gamepad.rs  globals.rs  hotkeys_mute.rs  input_utils.rs  models.rs  runtime_config.rs  tray.rs  updates_overlay.rs
website/: 404.html  index.html  old.html  site.webmanifest
