[package]
name = "silence"
version = "2.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
dioxus = { version = "0.7", features = ["desktop", "asset"] }
gilrs = "0.11.1"
once_cell = "1.21"
resvg = "0.47"
rodio = "0.22.2"
rfd = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.52", features = ["time"] }
winrt-toast = "0.1.1"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_Devices_FunctionDiscovery",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Registry",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_UI_Input_XboxController",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_HiDpi",
    "Win32_UI_Shell",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_UI_WindowsAndMessaging",
] }
